Se termina la sección proyectos duplicando el contenido del primer proyecto y se pesonaliza, se añade boton de ver mas

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,11 @@ h1{
     color: black;
     background-color: white;
 }
+.btn-info{
+    font-size: 1.1rem;
+    margin: 20px;
+    
+}
 .texto-negro{
     color: black;
 }
@@ -170,6 +175,15 @@ h1{
 
 
 /* Adaptable(Responsivo) */
+
+@media (max-width: 400px) {
+    .overlay p{
+        font-size: 18px ;
+    }
+    .overlay i {
+        font-size: 40px;
+    }
+}
 
 @media screen and (max-width: 767px) {
     .navbar-brand{
