--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,9 @@ h1{
     font-size: 1.5rem;
     color: #615151;
 }
-
+.hero-inferior-imagen {
+      width: 600px;
+}
 /* Sobre mi */
 
 .sobre-mi{
@@ -189,7 +191,7 @@ h1{
 
 /* Testimonios */
 .testimonios{
-    padding: 40px 40px 80ox 40px;
+    padding: 40px 40px 80px 40px;
 }
 .testimonios .carousel{
     max-width: 800px;
@@ -232,21 +234,21 @@ h1{
 }
 
 /* Contacto */
-.contacto .container{
+.contacto .container {
     max-width: 1100px;
     min-height: 200px;
-    padding: 20px;    
+    padding: 20px;
 }
-.contacto .rectangulo{
-    margin-top: -5rem;
-    background-color: rgb(13, 110, 253);
-    border-radius: 10px;
-    box-shadow: 0px 1px 4px 1px white;
+.contacto .rectangulo {
+   margin-top: -5rem;
+   background-color: rgb(13, 110, 253);
+   border-radius: 10px;
+   box-shadow: 0px 1px 4px 1px white;
 }
-.contacto .row{
-    width: 100px;
-    display: flex;
-    align-items: center;
+.contacto .row {
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 .contacto .descripcion {
     color: white;
@@ -274,6 +276,7 @@ h1{
 .contacto button:hover i{
     color: black;
 }
+
 /* Footer */
 footer{
     min-height: 500px;
@@ -345,7 +348,7 @@ footer{
     }
 }
 @media screen and (min-width: 700px) {
-    .hero-inferior-imagen{
-        max-width: 600px;
+    .hero-inferior-imagen {
+      max-width: 600px;
     }
-}
+  }
