Se añade proyectos reales, fotografia personal y formulario de contacto

--- a/styles.css
+++ b/styles.css
@@ -276,6 +276,15 @@ h1{
 .contacto button:hover i{
     color: black;
 }
+.contacto__formulario{
+    display: flex;
+    flex-direction: column;
+}
+.contacto__campo{
+    
+    border-radius: 5px;
+    margin-top: 10px;
+}
 
 /* Footer */
 footer{
